--- a/templates/home.html
+++ b/templates/home.html
@@ -2,10 +2,53 @@
 <html>
     <head>
         <title>GHASAM Jobs</title>
+        <style>
+            h1 {
+                font-size: 40;
+                font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+                font-weight: bold;
+                text-align: center;
+                color: rgb(37, 164, 146);
+            }
+            h2 {
+                font-size: 30;
+                font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+                font-weight: bold;
+            }
+            p {
+                font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            }
+            #banner {
+                width: 100%;
+                height: 360px;
+                object-fit: cover;
+            }
+            #container {
+                max-width: 720px;
+                margin: 0 auto 0 auto;
+            }
+        </style>
+        <link rel="icon" type="image/x-icon" href="favicon.svg">
     </head>
 
     <body>
-        Hello there! Akwaaba! This is where you can find and post job openings as a Ghanaian student in 
-        Montreal
+        <div id="container">
+        <h1>GHASAM Job Board</h1>
+        <img id="banner" src="http://127.0.0.1:5000/static/banner2.jpg" height="320" width="700">
+        <h2>About GHASAM</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit 
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+            sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+
+        <h2>Job Openings</h2>
+        <p>TODO</p>
+        <div style="text-align: center;">
+        <button>Contact Us</button>
+        </div>
+        </div>
     </body>
 </html>
