--- a/templates/home.html
+++ b/templates/home.html
@@ -2,40 +2,24 @@
 <html>
     <head>
         <title>GHASAM Jobs</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="icon" type="image/x-icon" href="http://127.0.0.1:5000/static/favicon.png">
         <style>
-            h1 {
-                font-size: 40;
-                font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-                font-weight: bold;
-                text-align: center;
-                color: rgb(37, 164, 146);
-            }
-            h2 {
-                font-size: 30;
-                font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-                font-weight: bold;
-            }
-            p {
-                font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            }
             #banner {
                 width: 100%;
                 height: 360px;
                 object-fit: cover;
             }
-            #container {
-                max-width: 720px;
-                margin: 0 auto 0 auto;
-            }
         </style>
-        <link rel="icon" type="image/x-icon" href="favicon.svg">
     </head>
 
     <body>
-        <div id="container">
-        <h1>GHASAM Job Board</h1>
-        <img id="banner" src="http://127.0.0.1:5000/static/banner2.jpg" height="320" width="700">
-        <h2>About GHASAM</h2>
+        <div class="container"> <!--container class is from bootstrap-->
+        <h1 class="text-center">GHASAM Job Board</h1>
+        <img class="img-fluid" id="banner" src="http://127.0.0.1:5000/static/banner2.jpg" height="320" width="700">
+        <h2 class="text-center mt-2">About GHASAM</h2>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
             labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
@@ -44,10 +28,15 @@
             sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
 
-        <h2>Job Openings</h2>
-        <p>TODO</p>
-        <div style="text-align: center;">
-        <button>Contact Us</button>
+        <h2 class="text-center mt-2">Job Openings</h2>
+          <!-- {{jobs}} this is a Flask utility (called templating syntax) that allows us insert dynamic data into HTML-->
+          {% for job in jobs %}
+            {% include 'jobitems.html' %}
+          {% endfor %}  
+
+        <div class="text-center">
+        <button type="button" class="btn btn-primary btn-lg">Contact Us</button>
+        <p class="mt-2">&copy;Copyright 2024</p>
         </div>
         </div>
     </body>
