--- a/templates/home.html
+++ b/templates/home.html
@@ -35,7 +35,7 @@
           {% endfor %}  
 
         <div class="text-center">
-        <button type="button" class="btn btn-primary btn-lg">Contact Us</button>
+        <button type="button" class="btn btn-primary btn-lg mt-3">Contact Us</button>
         <p class="mt-2">&copy;Copyright 2024</p>
         </div>
         </div>
