made minor changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
             sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
 
-        <h2 class="text-center mt-2">Job Openings</h2>
+        <h2 class="text-center mt-2">Open Postions</h2>
           <!-- {{jobs}} this is a Flask utility (called templating syntax) that allows us insert dynamic data into HTML-->
           {% for job in jobs %}
             {% include 'jobitems.html' %}
